Fixed HP bugs
- AIs that modified their MAXHP had incorrect HP on spawn (introduced by 9d32f61)
- AIs that modified their MAXHP had an incorrect HP regen rate
- the heal that players receive on level up wasn't displayed to nearby players or team members